--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakan Johnson - Webentwicklung</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Über Mich</a></li>
+                <li><a href="">Projekte</a></li>
+                <li><a href="">Fähigkeiten</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
+        <section>
+            <img class="hero" src="hero_1.jpg" alt="">
+        </section>
         <section>
             <h1>Willkommen</h1>
             <p>Ich bin ein Webentwickler mit Leidenschaft für sauberen Code und benutzerfreundliche Designs.</p>
@@ -20,7 +33,7 @@
             <button>Kontaktieren</button>
         </section>
         <section>
-            <img src="/hero_2.jpg" alt="Bild von HTML / CSS Code">
+            <img class="hero" src="hero_2.jpg" alt="Bild von HTML / CSS Code">
         </section>
         <section>
             <h2>Fähigkeiten</h2>
@@ -44,7 +57,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
