--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         </nav>
     </header>
     <main>
-        <section>
-            <img class="hero" src="hero_1.jpg" alt="">
+        <section class="about">
+            <h1 class="name">Hakan Johnson</h1>
+            <h3 class="titel">Webentwickler</h3>
+            <p class="spruch">{ individuell, modern, für dich } ;</p>
         </section>
-        <section>
+        <section class="content">
             <h1>Willkommen</h1>
             <p>Ich bin ein Webentwickler mit Leidenschaft für sauberen Code und benutzerfreundliche Designs.</p>
         </section>
-        <section>
+        <section class="content story">
             <h2>Über</h2>
             <h1>Meine Geschichte und mein Handwerk</h1>
             <p>Das Designen und Entwickeln, von der einfachen Skizze bis hin zur funktionierenden Webseite ist meine Leidenschaft. Nach vielen Jahren habe ich mein Hobby zum Beruf gemacht. Mein Fokus liegt auf Qualität und Zuverlässigkeit.</p>
@@ -35,7 +37,7 @@
         <section>
             <img class="hero" src="hero_2.jpg" alt="Bild von HTML / CSS Code">
         </section>
-        <section>
+        <section class="content">
             <h2>Fähigkeiten</h2>
             <h1>Was ich beherrsche</h1>
             <h3>Technologien und Werkzeuge für moderne Webentwicklung</h3>
@@ -43,7 +45,7 @@
             <div class="boxNormal"></div>
             <div class="boxNormal"></div>
         </section>
-        <section>
+        <section class="content">
             <h2>Portfolio</h2>
             <h1>Aktuelle Arbeiten</h1>
             <h3>Eine Auswahl meiner Projekte aus den letzten Jahren</h3>
@@ -51,7 +53,7 @@
             <div class="card"></div>
             <div class="card"></div>
         </section>
-        <section>
+        <section class="content">
             <div class="kontakt"></div>
             <div class="formular"></div>
         </section>
