--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakan Johnson - Webentwicklung</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=waving_hand" />
 </head>
 <body>
     <main>
-        <section class="about">
+        <section class="about dark">
             <h1 class="name">Hakan Johnson</h1>
             <h2 class="titel">Webentwickler</h2>
             <p class="spruch">{ individuell, modern, für dich } ;</p>
         </section>
         <section class="content">
-            <h2>Willkommen</h2>
+            <h1>Willkommen</h1>
             <p>Ich bin Webentwickler mit Leidenschaft für sauberen Code und benutzerfreundliche Designs.</p>
         </section>
-        <section class="content story">
+        <section class="content story dark">
             <h2>Über</h2>
             <h1>Meine Geschichte und mein Handwerk</h1>
             <p>Das Designen und Entwickeln, von der einfachen Skizze bis hin zur funktionierenden Webseite ist meine Leidenschaft. Nach vielen Jahren habe ich mein Hobby zum Beruf gemacht. Mein Fokus liegt auf Qualität und Zuverlässigkeit.</p>
@@ -32,28 +33,36 @@
             <div class="boxNormal"></div>
             <div class="boxNormal"></div>
         </section>
-        <section class="content">
+        <section class="content dark portfolio">
             <h2>Portfolio</h2>
-            <h3>Aktuelle Arbeiten</h3>
-            <h3>Eine Auswahl meiner Projekte aus den letzten Jahren</h3>
+            <h1>Aktuelle Arbeiten</h1>
+            <p>Eine Auswahl meiner Projekte aus den letzten Jahren</p>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
         </section>
         <section class="content">
-            <div class="kontakt"></div>
+            <h2>Nachricht</h2>
+            <h1>Schreiben Sie Mir</h1>
+            <p>Füllen Sie das Formular aus und ich antworte schnell</p>
             <div class="formular">
-                <form action="">
+                <form action="sendForm.php">
+                    <label for="">Vorname</label>
                     <input type="text">
+                    <label for="">Nachname</label>
                     <input type="text">
+                    <label for="">E-Mail</label>
                     <input type="email">
+                    <label for="">Telefonnummer</label>
                     <input type="tel">
+                    <label for="Worum geht es"></label>
                     <select name="" id="">
                         <option value="">Bitte wählen...</option>
                         <option value="">Test1</option>
                         <option value="">Test2</option>
                         <option value="">Test3</option>
                     </select>
+                    <label for="">Nachricht</label>
                     <textarea name="" id="" rows="6"></textarea>
                     <label for="">Ich akzeptiere die Nutzungsbedingungen</label>
                     <input type="checkbox">
@@ -64,9 +73,8 @@
     <footer>
         <div class="footer-group">
             <h4>Kontakt</h4>
-            <p>mail@hakan-johnson.de</p>
-            <p>+49 176 4426 6356</p>
-            <p>Auf der Beune 36, 64839 Münster(Hessen), Deutschland</p>
+            <p>&#x2709; mail@hakan-johnson.de</p>
+            <p>&#x260E; +49 176 4426 6356</p>
         </div>
         <div class="footer-group">
             <h4>Rechtliches</h4>
