--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="formular">
                 <form action="sendForm.php">
                     <label for="">Vorname</label>
-                    <input type="text">
+                    <input class="inname" type="text">
                     <label for="">Nachname</label>
-                    <input type="text">
+                    <input class="inname" type="text">
                     <label for="">E-Mail</label>
                     <input type="email">
                     <label for="">Telefonnummer</label>
@@ -64,8 +64,7 @@
                     </select>
                     <label for="">Nachricht</label>
                     <textarea name="" id="" rows="6"></textarea>
-                    <label for="">Ich akzeptiere die Nutzungsbedingungen</label>
-                    <input type="checkbox">
+                    <span><input id="yes" type="checkbox">Ich akzeptiere die Nutzungsbedingungen</span>
                 </form>
             </div>
         </section>
