Update mit Farben und Bild

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </section>
         <section class="content greeting">
             <h1>Willkommen</h1>
+            <img class="pp" src="pp.jpg" alt="">
             <p>Ich bin Webentwickler mit Leidenschaft und erstelle individuelle Webseiten mit modernen Designs.</p>
         </section>
         <section class="content story dark">
@@ -27,11 +28,13 @@
         </section>
         <section class="content skill">
             <h2>Fähigkeiten</h2>
-            <h1>Was ich beherrsche</h1>
-            <h3>Technologien und Werkzeuge für moderne Webentwicklung</h3>
-            <div class="boxWeit"></div>
-            <div class="boxNormal"></div>
-            <div class="boxNormal"></div>
+            <h1>Was ich anbiete</h1>
+            <div class="boxNormal">
+                <h2>Webseite Erstellung</h2>
+            </div>
+            <div class="boxNormal">
+                <h2>Domain Einrichtung</h2>
+            </div>
         </section>
         <section class="content dark portfolio">
             <h2>Portfolio</h2>
@@ -41,7 +44,7 @@
             <div class="card"></div>
             <div class="card"></div>
         </section>
-        <section class="content">
+        <section class="content bgGelb">
             <h2>Nachricht</h2>
             <h1>Schreib Mich An</h1>
             <p>Fülle das Formular aus und ich antworte schnell</p>
