Update - neue Farben, Karussel

--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
         <section class="content skill">
             <h2>Fähigkeiten</h2>
             <h1>Was ich anbiete</h1>
-            <div class="boxNormal">
-                <h2>Webseite Erstellung</h2>
-            </div>
-            <div class="boxNormal">
-                <h2>Domain Einrichtung</h2>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <div class="card"><p>Webseiten Erstellung</p></div>
+                    <div class="card"><p>Domain Einrichtung</p></div>
+                    <div class="card"><p>Kontakt Formulare</p></div>
+                    <div class="card"><p>Online Shop Einrichtung</p></div>
+                </div>
             </div>
         </section>
         <section class="content dark portfolio">
             <h2>Portfolio</h2>
             <h1>Aktuelle Arbeiten</h1>
             <p>Eine Auswahl meiner Projekte aus den letzten Jahren</p>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
         </section>
         <section class="content bgGelb">
             <h2>Nachricht</h2>
