--- a/index.html
+++ b/index.html
@@ -3,93 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakan Johnson - Webentwicklung</title>
+    <title>HJ - Webentwicklung</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=waving_hand" />
 </head>
 <body>
-    <main>
-        <section class="about dark">
-            <h1 class="name">Hakan Johnson</h1>
-            <h2 class="titel">Webentwickler</h2>
-            <p class="spruch">individuell, modern, für dich</p>
-        </section>
-        <section class="content greeting">
-            <h1>Willkommen</h1>
-            <img class="pp" src="pp.jpg" alt="">
-            <p>Ich bin Webentwickler mit Leidenschaft und erstelle individuelle Webseiten mit modernen Designs.</p>
-        </section>
-        <section class="content story dark">
-            <h2>Über</h2>
-            <h1>Meine Geschichte und mein Handwerk</h1>
-            <p>Das Designen und Entwickeln, von dem einfachen Entwurf bis hin zur funktionierenden Webseite ist meine Leidenschaft. Nach vielen Jahren habe ich mein Hobby zum Beruf gemacht. Mein Fokus liegt auf Qualität und Zuverlässigkeit.</p>
-            <button class="bmore">Mehr erfahren</button>
-            <button class="bkontakt">Kontaktieren</button>
-        </section>
-        <section class="content skill">
-            <h2>Fähigkeiten</h2>
-            <h1>Was ich anbiete</h1>
-            <div class="carousel-container">
-                <div class="carousel">
-                    <div class="card"><p>Webseiten Erstellung</p></div>
-                    <div class="card"><p>Domain Einrichtung</p></div>
-                    <div class="card"><p>Kontakt Formulare</p></div>
-                    <div class="card"><p>Online Shop Einrichtung</p></div>
+    <div id="wrapper">
+        <nav>
+
+        </nav>
+        <main>
+            <section class="section" id="hero">
+                <h2>Webseiten bauen, die wirken</h2>
+                <p>Ich baue Websites und Webanwendungen, die funktionieren. Ob du ein Entwickler bist, der meine Arbeit sehen möchte, oder ein Unternehmer mit einer Idee—hier findest du, was du brauchst.</p>
+                <div class="buttons">
+                    <button class="button_dark">Ich bin Entwickler</button>
+                    <button class="button_light">Ich bin Kunde</button>
                 </div>
-            </div>
-        </section>
-        <section class="content dark portfolio">
-            <h2>Portfolio</h2>
-            <h1>Aktuelle Arbeiten</h1>
-            <p>Eine Auswahl meiner Projekte aus den letzten Jahren</p>
-        </section>
-        <section class="content bgGelb">
-            <h2>Nachricht</h2>
-            <h1>Schreib Mich An</h1>
-            <p>Fülle das Formular aus und ich antworte schnell</p>
-            <div class="formular">
-                <form action="sendForm.php">
-                    <label for="">Vorname *</label>
-                    <input class="inname" type="text" required>
-                    <label for="">Nachname *</label>
-                    <input class="inname" type="text" required>
-                    <label for="">E-Mail *</label>
-                    <input type="email" required>
-                    <label for="">Telefonnummer (optional)</label>
-                    <input type="tel" placeholder="+49 0123 4567 89">
-                    <label for="betreff">Worum geht es *</label>
-                    <select name="" id="" required>
-                        <option value="">Bitte wählen...</option>
-                        <option value="">Allgemeine Anfrage</option>
-                        <option value="">Neue Webseite erstellen</option>
-                        <option value="">Bestehend Webseite optimieren</option>
-                    </select>
-                    <label for="">Nachricht *</label>
-                    <textarea name="" id="" rows="6" required></textarea>
-                    <p>* Pflichtangaben</p>
-                        <input id="yes" type="checkbox" required>
-                        <p>Ich akzeptiere die Nutzungsbedingungen</p>
-                    <input id="submit" name="submit" type="submit" value="Senden">
-                </form>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="footer-group">
-            <h4>Kontakt</h4>
-            <p>&#x2709; mail@hakan-johnson.de</p>
-            <p>&#x260E; +49 176 4426 6356</p>
-        </div>
-        <div class="footer-group">
-            <h4>Rechtliches</h4>
-            <p>Impressum</p>
-            <p>Datenshutz</p>
-            <p>Nutzungsbedingungen</p>
-            <p>AGB</p>
-        </div>
-        <div>
-            <p class="footer-group copy">© 2025 Hakan Johnson - Webentwicklung. Alle Rechte vorbehalten.</p>
-        </div>
-    </footer>
+            </section>
+        </main>
+        <footer>
+            <p>© 2026 Hakan Johnson - Webentwicklung. Alle Rechte vorbehalten.</p>
+        </footer>
+    </div>
 </body>
 </html>
