--- a/kunde.html
+++ b/kunde.html
@@ -13,12 +13,7 @@
             
         </nav>
         <main>
-            <section class="section">
-                <img id="profilbild" src="560EF503-8B0D-44D9-8681-2D18067DE9C1.PNG" alt="profil bild">
-                <div class="buttons">
-                    <button class="button_dark"><a href="">&#8618 Für Entwickler</a></button>
-                    <button class="button_light"><a href="/kunde.html">&#8618 Für Kunden</a></button>
-                </div>
+            <section class="section" id="hero">
             </section>
         </main>
         <footer>
