--- a/index.html
+++ b/index.html
@@ -3,31 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HJ - Webentwicklung</title>
+    <title>HJ - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <style>@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Stack+Sans+Notch:wght@200..700&display=swap');</style>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+    </style>
 </head>
 <body>
-    <div id="wrapper">
-        <nav id="nav">
-            
+    <section>
+        <nav>
+
         </nav>
-        <main>
-            <section class="section">
-                <img id="profilbild" src="560EF503-8B0D-44D9-8681-2D18067DE9C1.PNG" alt="profil bild">
-                <div class="buttons">
-                    <button class="button_dark"><a href="">&#8618 Für Entwickler</a></button>
-                    <button class="button_light"><a href="/kunde.html">&#8618 Für Kunden</a></button>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div>
-                <p>Impressum | Datenschutz</p>
-            </div>
-            <p id="divider"></p>
-            <p>Copyright © 2026 Hakan Johnson - Webentwicklung</p>
-        </footer>
-    </div>
+    </section>
+
+    <section class="hero_header_section">
+        <div class="hero_header_elements">
+            <h1>Ich gestalte deine Webseite, die zu dir passt!</h1>
+            <p>Ich baue moderne Webseiten und Webanwendungen, die fuktionieren und begeistern. Unkompliziert, ohne Kompromisse und invididuell. Kein Baukastensystem. </p>
+            <button class="a">Jetzt kontaktieren</button>
+            <button class="b">Mehr erfahren</button>
+        </div>
+        <div class="hero_header_img">
+            <img src="/pexels-harold-vasquez-853421-2653362.jpg" alt="Hero Header Image">
+        </div>
+    </section>
+    <section class="container leistungen_section">
+        <div class="card leistungen_elements"> 
+            
+            <img src="tab_24dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt="">  
+            <h2>Was ich für dich tue</h2>
+            <p>Schnelle, sichere und individuelle Lösungen für dein Geschäft</p>
+        </div>
+        <div class="card leistungen_elements">
+            <img src="tab_24dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt=""> 
+            <h2>Design und Entwicklung</h2>
+            <p>Ich begleite dich vom erstellen des Designs bis zur fertigen Webseite. Egal ob als neue Webseite oder Anpassung deiner bestehenden Webseite.</p>
+        </div>
+
+        <div class="card leistungen_elements">
+            <img src="tab_24dp_000000_FILL0_wght400_GRAD0_opsz24.png" alt=""> 
+            <h2>Individuelle Produkte</h2>
+            <p>Jedes Unternehmen ist indiduelle und genau so indivduell wird deine Webseite. Kein Baukastensystem. Keine 0815 Webseite.</p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Warum mit mir arbeiten</h2>
+        <p>Klare Kommunikation und transparente Prozesse von Anfang bis Ende</p>
+    </section>
 </body>
 </html>
